--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,8 +17,8 @@ jobs:
         include:
           - target: aarch64-apple-darwin
             os: macos-15
-          - target: x86_64-apple-darwin
-            os: macos-15
+          # - target: x86_64-apple-darwin
+          #   os: macos-15
           - target: x86_64-unknown-linux-gnu
             os: ubuntu-latest
 
